# -*- mode: org -*-

* Version 1.2.4 <2018-05-18 Wed>
  - computation of probability of exceeding "k" events for recurrents processs
  - computation of probability of exceeding "k1" and "k2" events for bivariate recurrents processseses
  - dspline simple spline decomposition on a data frame 
  - rmvn, dmvn: RNG and density for multivariate normal distribution
    with varying correlation coefficients.

* Version 1.2.3.1 <2018-04-18 Wed>
  - starting values updated for twinlm method

* Version 1.2.3 <2018-02-02 Mon>
  - twinlm now supports ordinal outcomes
  - optimized strata calculations in phreg  
  - optimized robust standard errors in phreg  
  - weights and offsets in phreg 
  - weights argument added to lifetable
  - gof of phreg with fast cumulative residuals (Lin, Wei, Ying) 
  - graphical gof of phreg 
  - recurrent events function for marginal mean with standard errors
  - simulating recurrent events with possibly two recurrent events  and death 
  - covariance calculation for recurrent events data and related bootstrap 

* Version 1.2.2 <2017-03-18 Sat>
  - Vignettes updated
  - Compatibility with lava version 1.5

* Version 1.2.1 <2017-02-25 Sat>
  - New documentation/vignettes 
  - Additional examples and unit tests
  - lifecourse plot function: lifecourse
  - block sampling function: dsample

* Version 1.2.0 <2017-02-03 Fri>
  - Namespace cleaning (twostage)...
  - Dependency on R>=3.3 radix algorithm
  - Case-Control sampling for twostage model. 
  - Two-stage additive gamma survival model. Additive random effects for two-stage survival
    model via pairwise composite likelihood. Simulation of family ace survival model. Function
    for computing Kendall's tau for pairs with additive gamma random effects model via simulations.
  - Two-stage additive gamma binomial model. Additive random effects for binomial model
    via pairwise composite likelihood. Simulation of family ace model. 