@@ -1,6 +1,7 @@
 # -*- mode: org -*-
 
 * Version 1.2.4 <2018-05-18 Wed>
+  - functions KM (Kaplan-Meier) and cif (cumulative incidence probability) with robust standard errors. 
   - computation of probability of exceeding "k" events for recurrents processs
   - computation of probability of exceeding "k1" and "k2" events for bivariate recurrents processseses
   - dspline simple spline decomposition on a data frame 
